layout issue

--- a/public/css/less/plan-view.less
+++ b/public/css/less/plan-view.less
@@ -53,6 +53,7 @@ p.note {
     .ticket-price-box {
       left:20px;
       margin:0px;
+      top:16px;
     }
 
   }
@@ -98,6 +99,8 @@ p.note {
   #checkoutContainer {
     #ticketsContainer .ticket-price-box {
       left:20px;
+      top:16px;
+
     }
   }
   
@@ -173,6 +176,8 @@ p.note {
 	.ticket-price-box {
 	  left:20px;
 	  margin:0px;
+	  top:16px;
+
 	}
       }
     }
@@ -422,6 +427,7 @@ p.note {
 	}
 	.ticket-price-box {
 	  left:20px;
+	  top:16px;
 	}
       }
     }
